third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/bug_16593.move
script {
    fun main() {
        let f = |x| |y| x + y;
        assert!(f(1)(2) == 3);
    }
}
